#ifndef COURSE_PROJECT_LOGGER_H
#define COURSE_PROJECT_LOGGER_H


class Logger {

};

#endif //COURSE_PROJECT_LOGGER_H
